# Changelog

## [Unreleased]
### Fixes
- added checks in DQDIMACS parser for errors and fixed parsing of free variables
- some solved instances by the preprocessor HQSpre were not caught, causing a thrown exception

### New
- updated HQSpre to the current (09-03-2021) version found with HQS at https://abs.informatik.uni-freiburg.de/src/projects_view.php?projectID=21

## [1.1] - 26-04-2020
### Fixes
- dynamic reordering is temporarily turned off during creation of existential dependency copies

### New
- added option to turn on/off dynamic reordering (turned on by default)

## [1.0] - 24-04-2020
- initial release

[1.1]: https://github.com/jurajsic/DQBDD/releases/tag/v1.1
[1.0]: https://github.com/jurajsic/DQBDD/releases/tag/v1.0